--- a/delivery.html
+++ b/delivery.html
@@ -5,24 +5,63 @@
 <title>Delivery Boy Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- GOOGLE FONT -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+<!-- BOOTSTRAP ICONS (IMPORTANT) -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
 <style>
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
 .main{padding:15px;max-width:900px;margin:auto}
-.top-bar{display:flex;justify-content:space-between;align-items:center;background:#0f172a;color:#fff;padding:12px 16px;border-radius:14px}
-.icon-btn{background:#2563eb;border:none;color:#fff;width:42px;height:42px;border-radius:50%;font-size:20px;cursor:pointer}
-.status-box,.order-card{background:#fff;margin-top:12px;padding:12px;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08)}
-.order-card{display:flex;gap:10px;position:relative}
-.order-card img{width:80px;height:70px;object-fit:cover;border-radius:8px}
-button.primary{background:#16a34a;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
-button.warn{background:#f59e0b;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
-button.done{background:#2563eb;color:#fff;border:none;padding:7px 12px;border-radius:8px;cursor:pointer;margin-top:5px}
-.submit-code{display:flex;gap:8px;margin-top:5px}
-.submit-code input{flex:1;padding:6px;border-radius:6px;border:1px solid #ccc}
-.submit-code button{padding:6px 10px;border:none;border-radius:6px;background:#2563eb;color:#fff;cursor:pointer}
+
+.top-bar{
+ display:flex;justify-content:space-between;align-items:center;
+ background:#0f172a;color:#fff;padding:12px 16px;border-radius:14px
+}
+.icon-btn{
+ background:#2563eb;border:none;color:#fff;
+ width:42px;height:42px;border-radius:50%;
+ font-size:20px;cursor:pointer
+}
+
+.status-box,.order-card{
+ background:#fff;margin-top:12px;padding:12px;
+ border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.08)
+}
+
+.order-card{display:flex;gap:10px}
+.order-card img{
+ width:80px;height:70px;object-fit:cover;border-radius:8px
+}
+
+.action-btn{
+ display:inline-flex;align-items:center;gap:6px;
+ border:none;padding:7px 12px;border-radius:8px;
+ cursor:pointer;margin-top:6px;font-size:13px
+}
+.accept{background:#16a34a;color:#fff}
+.pickup{background:#f59e0b;color:#fff}
+.submit{background:#2563eb;color:#fff}
+
+.submit-code{
+ display:flex;gap:6px;margin-top:6px
+}
+.submit-code input{
+ flex:1;padding:6px;border-radius:6px;border:1px solid #ccc
+}
+
+/* MODAL */
+.modal{
+ position:fixed;inset:0;background:rgba(0,0,0,.5);
+ display:none;align-items:center;justify-content:center;z-index:50
+}
+.modal-content{
+ background:#fff;padding:20px;border-radius:14px;
+ width:90%;max-width:400px
+}
+input{width:100%;padding:10px;margin:8px 0;border-radius:8px;border:1px solid #ccc}
 </style>
 </head>
 
@@ -32,8 +71,12 @@ button.done{background:#2563eb;color:#fff;border:none;padding:7px 12px;border-ra
 <div class="top-bar">
  <h3>🚚 Delivery Dashboard</h3>
  <div>
-  <button class="icon-btn" onclick="updateLocation()"><i class="bi bi-geo-alt-fill"></i></button>
-  <button class="icon-btn" onclick="openProfile()"><i class="bi bi-person-circle"></i></button>
+  <button class="icon-btn" onclick="updateLocation()">
+   <i class="bi bi-geo-alt-fill"></i>
+  </button>
+  <button class="icon-btn" onclick="openProfile()">
+   <i class="bi bi-person-circle"></i>
+  </button>
  </div>
 </div>
 
@@ -46,198 +89,116 @@ button.done{background:#2563eb;color:#fff;border:none;padding:7px 12px;border-ra
 <div id="orders"></div>
 </div>
 
-
 <!-- PROFILE MODAL -->
-<div class="modal" id="profileModal" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,.5);z-index:50;align-items:center;justify-content:center">
- <div style="background:#fff;padding:20px;width:90%;max-width:420px;border-radius:14px">
-   <h3>🚚 Delivery Boy Profile</h3>
-
-   <input id="dbName" placeholder="Name">
-   <input id="dbMobile" placeholder="Mobile">
-   <select id="dbVehicle">
-     <option value="">Vehicle Type</option>
-     <option value="two_wheeler">Two Wheeler</option>
-     <option value="three_wheeler">Three Wheeler</option>
-     <option value="four_wheeler">Four Wheeler</option>
-   </select>
-   <input id="dbVehicleNo" placeholder="Vehicle Number">
-   <input id="dbCity" placeholder="City">
-
-   <button class="primary" onclick="saveProfile()">Save Profile</button>
-   <button onclick="closeAll()">Close</button>
+<div class="modal" id="profileModal">
+ <div class="modal-content">
+  <h3>Delivery Profile</h3>
+  <input id="dbName" placeholder="Full Name">
+  <input id="dbMobile" placeholder="Mobile Number">
+  <button class="action-btn accept" onclick="saveProfile()">
+   <i class="bi bi-save"></i> Save
+  </button>
  </div>
 </div>
 
-<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script>
-const API = "https://shopbacked-vmhs.onrender.com";
-const TOKEN = localStorage.getItem("token");
-const DBID = localStorage.getItem("userId");
-const ROLE = localStorage.getItem("role");
+const API="https://shopbacked-vmhs.onrender.com";
+const TOKEN=localStorage.getItem("token");
+const DBID=localStorage.getItem("userId");
+const ROLE=localStorage.getItem("role");
 
-if(!DBID || ROLE!=="delivery"){
-  alert("Login again"); location.href="index.html";
+if(!DBID||ROLE!=="delivery"){
+ alert("Login again");location.href="index.html";
 }
 
-dbId.innerText = DBID.substring(0,8).toUpperCase();
+dbId.innerText=DBID.substring(0,8).toUpperCase();
 
-/* ===== SOCKET.IO ===== */
-const socket = io(API);
-socket.emit("joinDeliveryBoy", DBID);
-
-/* ===== PROFILE ===== */
+/* PROFILE */
 function openProfile(){
  profileModal.style.display="flex";
- const p = JSON.parse(localStorage.getItem("deliveryProfile_"+DBID)||"{}");
- dbName.value = p.name||"";
- dbMobile.value = p.mobile||"";
- dbVehicle.value = p.vehicle||"";
- dbVehicleNo.value = p.vehicleNo||"";
- dbCity.value = p.city||"";
-}
-
-function saveProfile(){
- const p = {
-   name: dbName.value,
-   mobile: dbMobile.value,
-   vehicle: dbVehicle.value,
-   vehicleNo: dbVehicleNo.value,
-   city: dbCity.value
- };
- localStorage.setItem("deliveryProfile_"+DBID, JSON.stringify(p));
- alert("Profile Saved ✅");
- closeAll();
+ const p=JSON.parse(localStorage.getItem("deliveryProfile_"+DBID)||"{}");
+ dbName.value=p.name||"";
+ dbMobile.value=p.mobile||"";
 }
 function saveProfile(){
- const p = {name:dbName.value,mobile:dbMobile.value};
- localStorage.setItem("deliveryProfile_"+DBID, JSON.stringify(p));
- alert("Profile saved"); closeAll();
+ localStorage.setItem(
+  "deliveryProfile_"+DBID,
+  JSON.stringify({name:dbName.value,mobile:dbMobile.value})
+ );
+ alert("Profile Saved");
+ profileModal.style.display="none";
 }
 
-/* ===== LIVE LOCATION ===== */
+/* LOCATION */
 function updateLocation(){
- navigator.geolocation.getCurrentPosition(async pos=>{
-  const body={
-   deliveryBoyId:DBID,
-   lat:pos.coords.latitude,
-   lng:pos.coords.longitude
-  };
-  await fetch(API+"/api/delivery/location",{
-   method:"POST",
-   headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
-   body:JSON.stringify(body)
-  });
-  locText.innerText=`📍 ${body.lat.toFixed(4)}, ${body.lng.toFixed(4)}`;
-  alert("Location updated");
+ navigator.geolocation.getCurrentPosition(pos=>{
+  locText.innerText=`📍 ${pos.coords.latitude.toFixed(4)}, ${pos.coords.longitude.toFixed(4)}`;
  });
 }
 
-/* ===== ORDERS ===== */
-let ordersList = [];
-
-function renderOrders(){
- orders.innerHTML = ordersList.map(o=>`
- <div class="order-card">
-   <img src="${o.productImg}">
-   <div style="flex:1">
-     <b>${o.productName}</b> ₹${o.price}<br>
-
-     🏪 ${o.wholesalerName}<br>
-     📞 ${o.wholesalerMobile}<br>
-     🏠 ${o.wholesalerAddress}<br><br>
-
-     🏬 ${o.retailerName}<br>
-     📞 ${o.retailerMobile}<br>
-     🏠 ${o.retailerAddress}<br>
-
-     🚗 Vehicle: <b>${o.vehicleType}</b><br>
-     📌 Status: <b>${o.status}</b><br>
-
-     ${o.status==="assigned_to_delivery"?`
-       <button class="primary" onclick="acceptOrder('${o._id}')">
-         <i class="bi bi-check-circle"></i> Accept
-       </button>`:""}
-
-     ${o.status==="delivery_accepted"?`
-       <button class="warn" onclick="pickupOrder('${o._id}')">
-         <i class="bi bi-box-seam"></i> Pickup
-       </button>`:""}
-
-     ${o.status==="picked_up"?`
-       <div class="submit-code">
-         <input placeholder="Delivery Code" id="code_${o._id}">
-         <button onclick="submitDelivered('${o._id}')">
-           <i class="bi bi-send-check"></i>
-         </button>
-       </div>`:""}
-
-     ${o.status==="delivered"?`
-       <button class="done" disabled>
-         <i class="bi bi-check2-all"></i> Delivered
-       </button>`:""}
-   </div>
- </div>`).join("") || "<p>No orders</p>";
-}
-
-/* ===== SOCKET NOTIFICATION ===== */
-socket.on("newOrder", order=>{
-  ordersList.unshift(order);
-  renderOrders();
-  alert("New Order Assigned!");
-});
-
-/* ===== ACTIONS ===== */
-async function acceptOrder(id){
- await fetch(`${API}/api/orders/${id}/delivery-accept`,{method:"POST", headers:{"Authorization":"Bearer "+TOKEN}});
- ordersList = ordersList.map(o=>o._id===id?{...o,status:"delivery_accepted"}:o);
- renderOrders();
-}
-
-async function pickupOrder(id){
- const code = Math.floor(100000 + Math.random()*900000);
- const order = ordersList.find(o=>o._id===id);
- const deliveryProfile = JSON.parse(localStorage.getItem("deliveryProfile_"+DBID)||"{}");
- await fetch(`${API}/api/orders/${id}/pickup`,{
-   method:"POST",
-   headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
-   body:JSON.stringify({
-     code,
-     deliveryBoyName: deliveryProfile.name,
-     deliveryBoyMobile: deliveryProfile.mobile
-   })
- });
- ordersList = ordersList.map(o=>o._id===id?{...o,status:"picked_up"}:o);
- renderOrders();
-}
-
-async function submitDelivered(id){
- const input = document.getElementById(`code_${id}`);
- if(!input.value) return alert("Enter code");
- await fetch(`${API}/api/orders/${id}/delivered`,{
-  method:"POST",
-  headers:{"Content-Type":"application/json","Authorization":"Bearer "+TOKEN},
-  body:JSON.stringify({code: input.value})
- });
- ordersList = ordersList.map(o=>o._id===id?{...o,status:"delivered"}:o);
- renderOrders();
-}
-
-/* ===== INITIAL LOAD ===== */
+/* LOAD ORDERS */
 async function loadOrders(){
- const res = await fetch(`${API}/api/orders/delivery/available`,{
-   headers:{"Authorization":"Bearer "+TOKEN}
+ const res=await fetch(API+"/api/orders/delivery/available",{
+  headers:{Authorization:"Bearer "+TOKEN}
  });
- const data = await res.json();
- ordersList = data.orders;
- renderOrders();
+ const data=await res.json();
+ renderOrders(data.orders||[]);
 }
-loadOrders();
-setInterval(loadOrders,10000);
 
-/* ===== CLOSE MODALS ===== */
-function closeAll(){
- document.querySelectorAll(".modal").forEach(m=>m.style.display="none");
+function renderOrders(list){
+ orders.innerHTML=list.map(o=>`
+ <div class="order-card">
+  <img src="${o.productImg}">
+  <div style="flex:1">
+   <b>${o.productName}</b> ₹${o.price}<br>
+   🏪 ${o.wholesalerName}<br>
+   🏬 ${o.retailerName}<br>
+   🚚 Vehicle: ${o.vehicleType}<br>
+   <b>Status:</b> ${o.status}<br>
+
+   ${o.status==="confirmed_by_wholesaler"?`
+    <button class="action-btn accept" onclick="acceptOrder('${o._id}')">
+     <i class="bi bi-check-circle-fill"></i> Accept
+    </button>`:""}
+
+   ${o.status==="delivery_accepted"?`
+    <button class="action-btn pickup" onclick="pickupOrder('${o._id}')">
+     <i class="bi bi-box-seam-fill"></i> Pickup
+    </button>`:""}
+
+   ${o.status==="picked_up"?`
+    <div class="submit-code">
+     <input id="code_${o._id}" placeholder="Delivery Code">
+     <button class="action-btn submit" onclick="deliver('${o._id}')">
+      <i class="bi bi-check2-circle"></i>
+     </button>
+    </div>`:""}
+  </div>
+ </div>
+ `).join("") || "<p>No Orders</p>";
 }
+
+/* ACTIONS */
+async function acceptOrder(id){
+ await fetch(API+"/api/orders/"+id+"/delivery-accept",{method:"POST"});
+ loadOrders();
+}
+async function pickupOrder(id){
+ await fetch(API+"/api/orders/"+id+"/pickup",{method:"POST"});
+ loadOrders();
+}
+async function deliver(id){
+ const code=document.getElementById("code_"+id).value;
+ await fetch(API+"/api/orders/"+id+"/delivered",{
+  method:"POST",
+  headers:{"Content-Type":"application/json"},
+  body:JSON.stringify({code})
+ });
+ loadOrders();
+}
+
+loadOrders();
+setInterval(loadOrders,8000);
 </script>
 </body>
 </html>
